@@ -1,0 +1,9 @@
+Title: ipmi: now IPMI sensors can be ignored by their status texts during discovery
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.4.0i1
+Date: 1472818626
+Class: feature
+
+
