@@ -25,6 +25,16 @@
 # Boston, MA 02110-1301 USA.
 
 
+#   .--output--------------------------------------------------------------.
+#   |                               _               _                      |
+#   |                    ___  _   _| |_ _ __  _   _| |_                    |
+#   |                   / _ \| | | | __| '_ \| | | | __|                   |
+#   |                  | (_) | |_| | |_| |_) | |_| | |_                    |
+#   |                   \___/ \__,_|\__| .__/ \__,_|\__|                   |
+#   |                                  |_|                                 |
+#   '----------------------------------------------------------------------'
+
+
 # Example of output from ipmi:
 # <<<ipmi>>>
 # ambienttemp 25.800 degrees_C ok na na na 34.800 40.200 na
@@ -139,36 +149,67 @@
 # PS3_Inpu
 
 
-ipmi_summarize = True
-ipmi_ignore_nr = False # set to True in order to ignore entries with state 'nr'
-ipmi_ignored_sensors = [] # example: [ "Power_Meter", "Virtual_Fan" ]
-inventory_ipmi_rules = []
+#.
+#   .--ignore--------------------------------------------------------------.
+#   |                    _                                                 |
+#   |                   (_) __ _ _ __   ___  _ __ ___                      |
+#   |                   | |/ _` | '_ \ / _ \| '__/ _ \                     |
+#   |                   | | (_| | | | | (_) | | |  __/                     |
+#   |                   |_|\__, |_| |_|\___/|_|  \___|                     |
+#   |                      |___/                                           |
+#   '----------------------------------------------------------------------'
+
+
+ipmi_summarize            = True
+ipmi_ignored_sensors      = [] # example: [ "Power_Meter", "Virtual_Fan" ]
+ipmi_ignored_sensorstates = [] # example: [ "nr", "ns" ]
+inventory_ipmi_rules      = []
 
 
 def ipmi_get_ignored_sensors(hostname):
-    # merge ignored sensor list specified here and those from wato
-    ignored_sensors_combined = ipmi_ignored_sensors[:]
+    # Merge ignored sensor list specified here and those from wato
+    ignored_sensors_combined      = ipmi_ignored_sensors[:]
+    ignored_sensorstates_combined = ipmi_ignored_sensorstates[:]
+
     rules = host_extra_conf(hostname, inventory_ipmi_rules)
     if rules:
-        ignored_sensors_combined += rules[0].get("ignored_sensors", [])
+        ignored_sensors_combined      += rules[0].get("ignored_sensors", [])
+        ignored_sensorstates_combined += rules[0].get("ignored_sensorstates", [])
 
-    return ignored_sensors_combined
+    # Stay compatible to set old style variable 'ipmi_ignore_nr == True'
+    try:
+        if ipmi_ignore_nr and 'nr' not in ignored_sensorstates_combined:
+            ignored_sensorstates_combined.append('nr')
+    except:
+        pass
+
+    return ignored_sensors_combined, ignored_sensorstates_combined
 
 
-def ipmi_ignore_entry(name, state, ignored_sensors):
-    if ipmi_ignore_nr and (state.startswith('nr') or state.startswith('ns')):
-        return True
-
+def ipmi_ignore_entry(name, status_txt, ignored_sensors, ignored_sensorstates):
+    for cmp_status in ignored_sensorstates:
+        if status_txt.startswith(cmp_status):
+            return True
     for e in ignored_sensors:
         if name.startswith(e):
             return True
-
     return False
 
 
+#.
+#   .--parse/discover------------------------------------------------------.
+#   |                               __  _ _                                |
+#   |  _ __   __ _ _ __ ___  ___   / /_| (_)___  ___ _____   _____ _ __    |
+#   | | '_ \ / _` | '__/ __|/ _ \ / / _` | / __|/ __/ _ \ \ / / _ \ '__|   |
+#   | | |_) | (_| | |  \__ \  __// / (_| | \__ \ (_| (_) \ V /  __/ |      |
+#   | | .__/ \__,_|_|  |___/\___/_/ \__,_|_|___/\___\___/ \_/ \___|_|      |
+#   | |_|                                                                  |
+#   '----------------------------------------------------------------------'
+
+
 def parse_ipmi(info):
+    parsed = {}
     ipmi_info, ipmi_discrete_info = info
-    parsed = []
     for section in [ ipmi_info, ipmi_discrete_info ]:
         if section:
             for line in section:
@@ -185,27 +226,59 @@ def parse_ipmi(info):
                         line = [line[0], None, None, state, None, None, None, None, None, None]
 
                 if len(line) == 10:
-                    parsed.append(line)
-
+                    parsed.setdefault(name, dict( zip([
+                        "value", "unit", "status_txt", "unrec_low", "crit_low",
+                        "warn_low", "warn_high", "crit_high", "unrec_high", ],
+                        line[1:] )))
     return parsed
 
 
 def inventory_ipmi(info):
-    parsed = parse_ipmi(info)
+    parsed    = parse_ipmi(info)
     summarize = True
-    rules = host_extra_conf(g_hostname, inventory_ipmi_rules)
+    rules     = host_extra_conf(g_hostname, inventory_ipmi_rules)
     if rules:
         summarize = rules[0].get("summarize", True)
 
-    # the default for summarize is always true so if either configuration key has been set
+    # The default for summarize is always true so if either configuration key has been set
     # to false that setting was changed by the user and needs to override the other
     if not ipmi_summarize or not summarize or len(parsed) == 0:
-        ignored_sensors = ipmi_get_ignored_sensors(g_hostname)
-        for line in parsed:
-            if not ipmi_ignore_entry(line[0], line[3], ignored_sensors):
-                yield line[0], None
+        ignored_sensors, ignored_sensorstates = ipmi_get_ignored_sensors(g_hostname)
+        for sensorname, data in parsed.items():
+            if not ipmi_ignore_entry(sensorname, data["status_txt"], ignored_sensors, ignored_sensorstates):
+                yield sensorname, None
     else:
         yield "Summary", None
+
+
+#.
+#   .--check---------------------------------------------------------------.
+#   |                           _               _                          |
+#   |                       ___| |__   ___  ___| | __                      |
+#   |                      / __| '_ \ / _ \/ __| |/ /                      |
+#   |                     | (__| | | |  __/ (__|   <                       |
+#   |                      \___|_| |_|\___|\___|_|\_\                      |
+#   |                                                                      |
+#   '----------------------------------------------------------------------'
+
+
+def ipmi_status_txt_mapping(status_txt):
+    if status_txt.startswith('ok') and not "failure detected" in status_txt.lower():
+        state = 0
+    elif status_txt.startswith('nc'):
+        state = 1
+    else:
+        state = 2
+    return state
+
+
+def ipmi_format_message(val, unit):
+    infotext = ""
+    if val is not None:
+        infotext += ", %s" % val
+        if unit not in [ 'unspecified', None ]:
+            infotext += " %s" % unit
+    return infotext
 
 
 def check_ipmi(item, params, info):
@@ -218,94 +291,102 @@ def check_ipmi(item, params, info):
         return check_ipmi_detailed(item, params, parsed)
 
 
-def ipmi_format_message(status, val, unit):
-    infotext = status
-
-    # otherwise the unit is unknown or there is none (val could represent yes/no)
-    if val is not None:
-        infotext += ", %s" % val
-
-    if unit not in [ 'unspecified', None ]:
-        infotext += " %s" % unit
-
-    return infotext
-
-
 def check_ipmi_detailed(item, params, parsed):
-    for name, val, unit, status_txt, unrec_low, crit_low, \
-        warn_low, warn_high, crit_high, unrec_high in parsed:
+    if item in parsed:
+        data       = parsed[item]
+        val        = data["value"]
+        unit       = data["unit"]
+        status_txt = data["status_txt"]
+        crit_low   = data["crit_low"]
+        warn_low   = data["warn_low"]
+        warn_high  = data["warn_high"]
+        crit_high  = data["crit_high"]
 
-        if name == item:
-            if val is not None:
-                perfdata = [ (name, val + unit, warn_high, crit_high) ]
-            else:
-                perfdata = []
+        # stay compatible with older versions
+        perfdata = []
+        if val is not None:
+            perfdata = [ (item, val + unit, warn_high, crit_high) ]
 
-            if status_txt.startswith('ok') and not "failure detected" in status_txt.lower():
-                state = 0
-            elif status_txt.startswith('nc'):
-                state = 1
-            else:
-                state = 2
+        state = ipmi_status_txt_mapping(status_txt)
+        for wato_status_txt, wato_status in params.get("sensor_states", []):
+            if status_txt.startswith(wato_status_txt):
+                state = wato_status
+                break
 
-            for wato_status_txt, wato_status in params.get("sensor_states", []):
-                if status_txt.startswith(wato_status_txt):
-                    state = wato_status
-                    break
+        lvlstxts = []
+        for ty, warn, crit in [
+            ("at",    warn_low,  crit_low),
+            ("below", warn_high, crit_high) ]:
+            lvlstxt = ""
+            if warn is not None and crit is None:
+                lvlstxt = "warn %s %s" % (ty, warn)
+            elif warn is not None and crit is not None:
+                lvlstxt = "warn/crit %s %s/%s" % (ty, warn, crit)
+            elif warn is None and crit is not None:
+                lvlstxt = "crit %s %s" % (ty, crit)
+            if lvlstxt and unit not in [ 'unspecified', None ]:
+                lvlstxt += " %s" % unit
+            if lvlstxt:
+                lvlstxts.append(lvlstxt)
 
-            return state, "Status: %s" % ipmi_format_message(status_txt, val, unit), perfdata
+        levelsinfo = ""
+        if state and lvlstxts:
+            levelsinfo = " (%s)" % ", ".join(lvlstxts)
+
+        return state, "Status: %s%s%s" % (status_txt, ipmi_format_message(val, unit), levelsinfo), perfdata
 
 
 def check_ipmi_summarized(parsed, params):
     worst_state   = 0
     warn_texts    = []
     crit_texts    = []
-    count         = 0
+    ok_texts      = []
     ambient_count = 0
     ambient_sum   = 0.0
 
+    ignored_sensors, ignored_sensorstates = ipmi_get_ignored_sensors(g_hostname)
     if 'ignored_sensors' not in params:
-        params['ignored_sensors'] = ipmi_get_ignored_sensors(g_hostname)
+        params['ignored_sensors'] = ignored_sensors
 
-    for name, val, unit, status_txt, unrec_low, crit_low, \
-        warn_low, warn_high, crit_high, unrec_high in parsed:
+    if 'ignored_sensorstates' not in params:
+        params['ignored_sensorstates'] = ignored_sensorstates
+
+    for sensorname, data in parsed.items():
+        val        = data["value"]
+        unit       = data["unit"]
+        status_txt = data["status_txt"]
+        crit_low   = data["crit_low"]
+        warn_low   = data["warn_low"]
+        warn_high  = data["warn_high"]
+        crit_high  = data["crit_high"]
 
         # Skip datasets which have no valid data (zero value, no unit and state nc)
         if val == '0.000' and unit == 'unspecified' and status_txt.startswith('nc'):
             continue
 
-        if ipmi_ignore_entry(name, status_txt, params['ignored_sensors']):
+        if ipmi_ignore_entry(sensorname, status_txt, ignored_sensors, ignored_sensorstates):
             continue
 
-        count    += 1
-        infotext  = "%s (%s)" % (name, ipmi_format_message(status_txt, val, unit))
-        tmp_state = 0
-
-        if status_txt.startswith('nc'):
-            tmp_state = 1
-
-        elif status_txt.startswith('nr') and ipmi_ignore_nr:
-            pass
-
-        elif not status_txt.startswith('ok') or "failure detected" in status_txt.lower():
-            tmp_state = 2
-
+        sensorstate = ipmi_status_txt_mapping(status_txt)
         for wato_status_txt, wato_status in params.get("sensor_states", []):
             if status_txt.startswith(wato_status_txt):
-                tmp_state = wato_status
+                sensorstate = wato_status
                 break
 
-        if tmp_state == 1:
+        infotext = "%s (%s)" % (sensorname, status_txt)
+        if sensorstate == 1:
             warn_texts.append(infotext)
-        elif tmp_state == 2:
+        elif sensorstate == 2:
             crit_texts.append(infotext)
+        else:
+            ok_texts.append(infotext)
 
-        worst_state = max(worst_state, tmp_state)
+        worst_state = max(worst_state, sensorstate)
 
-        if "amb" in name or "Ambient" in name:
+        if "amb" in sensorname or "Ambient" in sensorname:
             try:
                 ambient_count += 1
-                ambient_sum += float(val)
+                ambient_sum   += float(val)
             except:
                 pass
 
@@ -314,15 +395,13 @@ def check_ipmi_summarized(parsed, params):
     else:
         perfdata = []
 
-    if worst_state == 0:
-        infotexts = [ "%d sensors OK" % count ]
-
-    else:
-        infotexts = []
-        if len(crit_texts) > 0:
-            infotexts.append("CRIT are: %s" % ", ".join(crit_texts))
-        if len(warn_texts) > 0:
-            infotexts.append("WARN are: %s" % ", ".join(warn_texts))
+    infotexts = []
+    if len(ok_texts) > 0:
+        infotexts.append( "%d sensors" % len(ok_texts) )
+    if len(warn_texts) > 0:
+        infotexts.append( "WARN: %s" % ", ".join(warn_texts) )
+    if len(crit_texts) > 0:
+        infotexts.append( "CRIT: %s" % ", ".join(crit_texts) )
 
     return worst_state, ' - '.join(infotexts), perfdata
 
@@ -333,7 +412,9 @@ def ipmi_precompile(hostname, item, params):
     else:
         precomped = {}
 
-    precomped['ignored_sensors'] = ipmi_get_ignored_sensors(hostname)
+    ignored_sensors, ignored_sensorstates = ipmi_get_ignored_sensors(hostname)
+    precomped['ignored_sensors']          = ignored_sensors
+    precomped['ignored_sensorstates']     = ignored_sensorstates
     return precomped
 
 
@@ -341,6 +422,7 @@ def ipmi_precompile(hostname, item, params):
 # in precompiled code
 check_config_variables.append("ipmi_ignore_nr")
 check_config_variables.append("ipmi_ignored_sensors")
+check_config_variables.append("ipmi_ignored_sensorstates")
 
 
 check_info["ipmi"] = {
